Updated WPThemes and finished setting up templates
- WPTwentyTwentyThree, TwentyTwentyFour and TwentySeventeen
- empty canvas

--- a/themes/fictional-block-theme/style.css
+++ b/themes/fictional-block-theme/style.css
@@ -1,3 +1,8 @@
 /*
-Theeme Name: Fictional University Block Theme
+Theme Name: Fictional University Block Theme
+Theme URI: https://example.tk
+Author: Me
+Author URI: https://example.tk
+Description: This is my custom theme
+Version: 1.0
 */
